# riscv-kernel

./: Cargo.toml  boot.s  link.ld  meson.build  run.sh
.cargo/: config.toml
rust-std/: rust-std-1.84.0.ebuild
src/: kalloc.rs  kprint.rs  lib.rs  meson.build  vm.rs
src/kalloc/: bump.rs  mod.rs
src/sbi/: console.rs
